--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.3",
+    "react-select-country-list": "^2.2.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/leaflet-draw": "^1.0.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-select-country-list": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
