--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
+    "react-select": "^5.8.3",
+    "react-select-country-list": "^2.2.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
