--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-leaflet-draw": "^0.20.4",
     "react-select": "^5.8.3",
     "react-select-country-list": "^2.2.3",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
